# py_invest

./: README.md  TODO.txt  pyproject.toml  requirements.txt  temp_implementation
stocks/: http_server copy.py  http_server.py  http_server_trading.py  server_notifier.py  ticker_analyze.py  tickers.py  trading_constants.py
stocks/data_providers/: __init__.py  alpha_vantage.py  fmp.py  fmp_metrics.py  poly_fundamentals.py  polygon.py  yahoo_finance.py
stocks/db/: __init__.py  constants.py  dao_portfolio_positions.py  dao_portfolios.py  dao_tickers.py  dao_tickers_data.py  db.py  db_tickers.py  row_portfolio_positions.py  row_portfolios.py  row_tickers.py  row_tickers_data.py
stocks/exporters/: ical_exporter.py
stocks/frontend/: __init__.py  web_portfolio_position.py
stocks/frontend/html/: portfolio.html  portfolios.html  ticker.html  trading.html
stocks/frontend/html/static/css/: css.css
stocks/html/: index.html  portfolio.html
stocks/utils/: db_util.py  util.py
tests/data_providers/: __init__.py  test_alpha_vantage.py
